[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/global.gd" type="Script" id=1]
[ext_resource path="res://scripts/cameraController.gd" type="Script" id=2]
[ext_resource path="res://theme/basic.thm" type="Theme" id=3]
[ext_resource path="res://textures/tileset.tres" type="TileSet" id=4]
[ext_resource path="res://scripts/DataObjects/tilemap/selectTile.gd" type="Script" id=5]

[node name="Field" type="Node"]

script/script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

offset = Vector2( 800, 512 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 2.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 2 )

[node name="GUI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
__meta__ = { "_editor_collapsed":true }

[node name="Party" type="VBoxContainer" parent="GUI"]

margin/left = 74.0
margin/top = 43.0
margin/right = 355.0
margin/bottom = 162.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0
__meta__ = { "_edit_lock_":true }

[node name="Enemy" type="VBoxContainer" parent="GUI"]

anchor/left = 1
anchor/right = 1
margin/left = 439.0
margin/top = 43.0
margin/right = 158.0
margin/bottom = 162.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0
__meta__ = { "_edit_lock_":true }

[node name="InfoPanel" type="Panel" parent="GUI"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
margin/left = 321.0
margin/top = 135.0
margin/right = -508.0
margin/bottom = 19.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="Text" type="RichTextLabel" parent="GUI/InfoPanel"]

anchor/right = 1
anchor/bottom = 1
margin/left = 10.0
margin/top = 11.0
margin/right = 19.0
margin/bottom = 13.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="TileMap_Floor" type="TileMap" parent="."]

mode = 1
tile_set = ExtResource( 4 )
cell/size = Vector2( 128, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -262138, 5, -262137, 5, -262136, 5, -262135, 5, -262134, 5, -262133, 5, -262132, 5, -262131, 5, -262130, 5, -262129, 5, -262128, 5, -262127, 5, -262126, 5, -262125, 5, -196602, 5, -196601, 5, -196600, 5, -196599, 5, -196598, 5, -196597, 5, -196596, 5, -196595, 5, -196594, 5, -196593, 5, -196592, 5, -196591, 5, -196590, 5, -196589, 5, -131066, 5, -131065, 5, -131064, 5, -131063, 5, -131062, 5, -131061, 5, -131060, 5, -131059, 5, -131058, 5, -131057, 5, -131056, 5, -131055, 5, -131054, 5, -131053, 5, -65530, 5, -65529, 5, -65528, 5, -65527, 5, -65526, 5, -65525, 5, -65524, 5, -65523, 5, -65522, 5, -65521, 5, -65520, 5, -65519, 5, -65518, 5, -65517, 5, 6, 5, 7, 5, 8, 5, 9, 5, 10, 5, 11, 5, 12, 5, 13, 5, 14, 5, 15, 5, 16, 5, 17, 5, 18, 5, 19, 5, 65542, 5, 65543, 5, 65544, 5, 65545, 5, 65546, 5, 65547, 5, 65548, 5, 65549, 5, 65550, 5, 65551, 5, 65552, 5, 65553, 5, 65554, 5, 65555, 5, 131078, 5, 131079, 5, 131080, 5, 131081, 5, 131082, 5, 131083, 5, 131084, 5, 131085, 5, 131086, 5, 131087, 5, 131088, 5, 131089, 5, 131090, 5, 131091, 5, 196614, 5, 196615, 5, 196616, 5, 196617, 5, 196618, 5, 196619, 5, 196620, 5, 196621, 5, 196622, 5, 196623, 5, 196624, 5, 196625, 5, 196626, 5, 196627, 5, 262150, 5, 262151, 5, 262152, 5, 262153, 5, 262154, 5, 262155, 5, 262156, 5, 262157, 5, 262158, 5, 262159, 5, 262160, 5, 262161, 5, 262162, 5, 262163, 5, 327686, 5, 327687, 5, 327688, 5, 327689, 5, 327690, 5, 327691, 5, 327692, 5, 327693, 5, 327694, 5, 327695, 5, 327696, 5, 327697, 5, 327698, 5, 327699, 5, 393222, 5, 393223, 5, 393224, 5, 393225, 1, 393226, 1, 393227, 5, 393228, 5, 393229, 5, 393230, 5, 393231, 5, 393232, 5, 393233, 5, 393234, 5, 393235, 5, 458758, 1, 458759, 1, 458760, 1, 458761, 1, 458762, 1, 458763, 1, 458764, 1, 458765, 1, 458766, 1, 458767, 1, 458768, 1, 458769, 1, 458770, 1, 458771, 1 )
script/script = ExtResource( 5 )

[node name="TileMap_Objects" type="TileMap" parent="TileMap_Floor"]

mode = 1
tile_set = ExtResource( 4 )
cell/size = Vector2( 128, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -65530, 3, -65529, 3, 6, 3, 7, 3, 16, 2, 65542, 3, 65543, 3 )


